# tessera-os

./: .gitignore  clean_analysis.txt  cloudflare_email_worker.js  package.json  pnpm-lock.yaml  push_output.txt  push_output2.txt  push_output3.txt  push_output4.txt  requirements.txt  test_trigger.js  tmp_analysis.txt  tmp_analyze.js  tmp_schema.py  tmp_templates.json  turbo.json  update_integrations.js  update_integrations.py  verify_tasks.py
apps/recorder-extension/: background.js  content.js  manifest.json  popup.html  popup.js
apps/task-miner/: index.html  package.json  vite.config.ts
apps/web/: package.json  (+6 more)
apps/workers/: Dockerfile  add_start_end_nodes.py  compiler.py  config_db.py  crypto.py  debug_creds.py  deploy_chats_schema.py  drop_column.py  graph.py  init_async_db.py  insert_e2b_tool.py  inspect_templates.py  main.py  migrate.py  package.json  pyproject.toml  requirements.txt  resend_out.txt  seed_custom_tool.py  seed_email_route.py  seed_llm_tool.py  seed_tenant.py  telemetry_out.txt  temp_apply_migration.py  temp_check_schema.py  temp_query_telemetry.py  tenant_graph.py  test_auth_insert.py  test_db.py  test_email_webhook.py  test_keys.py  test_pg_insert.py  test_resume.py  test_rls.py  test_schema.py  tools.py  update_prompt.py  upgrade_catalog.py  uvicorn.err  uvicorn2.err  (+1 more)
apps/workers/graphs/: builder.py  nodes.py  template_factory.py  tools.py
apps/workers/routers/: admin.py  async_tasks.py  auth.py  chat.py  communications.py  integrations.py  recordings.py  telemetry.py  webhooks.py
docs/: architecture_diagram.mmd
supabase/: config.toml
(+88 files in other folders)
