[project]
name = "tessera-workers"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "langchain-core (>=1.2.15,<2.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "e2b-code-interpreter (>=2.4.1,<3.0.0)",
    "portkey-ai (>=2.2.0,<3.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.4,<4.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
